--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: englis;
+    src: url(./IMFellEnglish-Regular.woff2);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -12,7 +17,7 @@ html,body{
 #bg{
     height: 100%;
     width: 100%;
-    background-image: url(./img.jpg); 
+    background-image: url(./img.webp); 
     background-size: cover;
 }
 
@@ -21,7 +26,7 @@ h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: englis;
     font-weight: 100;
     font-size: 190px;
     color: #fff;
